--- a/src/style.css
+++ b/src/style.css
@@ -8,24 +8,39 @@
 body {
   background-color: #def2fd;
 }
+
+.loading-screen {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  background-color: #149cf9;
+}
+.loading-screen p {
+  font-family: 'poppins';
+  color: #fff;
+}
+.loading-screen p:first-of-type {
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+.loading-screen img {
+  width: 200px;
+  aspect-ratio: 1;
+}
 .container {
   max-width: 500px;
   margin: 0 auto;
-  padding-bottom: 30px;
-  background-color: #000;
-  color: #fff;
+  padding: 30px 30px 100px 30px;
+  background-image: linear-gradient(135deg, #ff9a9e, #fad0c4);
+  position: relative;
   min-height: 100vh;
+  display: none;
 }
-.blue-bg {
-  background-color: #149cf9;
-  padding: 20px 20px 40px 20px;
-  border-bottom-right-radius: 50px;
-  border-bottom-left-radius: 50px;
-  box-shadow:
-    0 8px 24px rgba(0, 0, 0, 0.12),
-    inset 0 1px 0 rgba(255, 255, 255, 0.6),
-    inset 0 -1px 2px rgba(0, 0, 0, 0.04);
-}
+
 .search-container {
   max-width: 90%;
   display: flex;
@@ -34,7 +49,7 @@ body {
   position: relative;
 }
 
-#search {
+.search {
   box-sizing: border-box;
   width: 100%;
   border-radius: 30px;
@@ -46,9 +61,9 @@ body {
   padding: 0 50px 0 20px;
   font-family: 'poppins';
 }
-#search:hover,
-#search:focus,
-#search:active {
+.search:hover,
+.search:focus,
+.search:active {
   background-color: white;
   outline: 2px solid #aaa;
 }
@@ -71,55 +86,50 @@ body {
 }
 
 .info-container {
-  margin-top: 30px;
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   font-family: 'poppins';
+  background-color: #ddd;
+  border-radius: 22px;
+  padding: 10px 30px;
 }
 
 .place {
-  font-size: 1.5rem;
+  margin-top: 20px;
+  font-size: 1.6rem;
   font-weight: 600;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 4px;
 }
 
-.icon-container {
-  /*   margin-top: 20px;
-  width: 30%;
-  aspect-ratio: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center; */
-}
-.icon-container img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
 .temp {
-  font-size: 6rem;
+  font-size: 3.5rem;
   font-weight: 600;
 }
 .temp-feel {
   font-size: 1.2rem;
   font-family: 'Libertinus+Math';
+  font-weight: 600;
 }
 
 .cloud-condition {
-  font-size: 1.7rem;
+  font-size: 1.3rem;
+  align-self: flex-end;
 }
 .weather-info {
-  margin-top: 25px;
-  width: 80%;
-  height: 105px;
-  padding: 10px 0;
+  margin: 25px auto;
+  width: 100%;
+  /* height: 105px; */
+  padding: 40px 0;
   border-radius: 22px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: #149cf9;
 }
 .weather-info > div {
   display: flex;
@@ -143,26 +153,104 @@ body {
 .rain img {
   height: 30px;
 }
+.astronomy {
+  font-family: 'poppins';
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.astronomy-time {
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+.sun,
+.moon {
+  border-radius: 20px;
+}
+
+.sun {
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(40px);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 30px;
+  box-shadow:
+    0 8px 24px rgba(0, 0, 0, 0.12),
+    inset 0 1px 0 rgba(255, 255, 255, 0.6),
+    inset 0 -1px 2px rgba(0, 0, 0, 0.04);
+}
+.sun > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+.sunrise,
+.sunset {
+  width: 70px;
+  aspect-ratio: 1;
+  border-radius: 13px;
+}
+.sunrise {
+  background-image: url('./images/sunrise.jpg');
+  background-position: center;
+  background-size: cover;
+}
+.sunset {
+  background-image: url('./images/sunset.jpg');
+  background-position: center;
+  background-size: cover;
+}
+.moon {
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(40px);
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  gap: 45px;
+  padding: 30px 20px;
+  box-shadow:
+    0 8px 24px rgba(0, 0, 0, 0.12),
+    inset 0 1px 0 rgba(255, 255, 255, 0.6),
+    inset 0 -1px 2px rgba(0, 0, 0, 0.04);
+}
+.down {
+  align-self: flex-end;
+}
+.moon-image {
+  max-width: 200px;
+  width: 100%;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background-image: url('./images/moon.jpg');
+  background-position: center;
+  background-size: cover;
+}
+.small {
+  font-size: 0.9rem;
+}
+
 .today {
   margin: 30px auto 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   max-width: 100%;
-  color: #ddd;
-  padding: 0 30px;
+  color: #000;
+  /* padding: 0 30px; */
 }
 .weather-today {
   text-align: center;
   margin-bottom: 20px;
-  color: #bbb;
+  color: #555;
   font-family: 'Libertinus+Math';
 }
 .hourly-weather {
   margin-top: 20px;
   display: flex;
   gap: 15px;
-  justify-content: space-between;
   width: 100%;
   overflow-x: auto;
   scrollbar-width: thin;
@@ -182,14 +270,12 @@ body {
   background: grey;
 }
 .hourly-weather > div {
-  border: 1px solid #888;
   flex-shrink: 0;
-  width: 120px;
+  width: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 7px 10px;
-  border-radius: 20px;
   text-align: center;
   padding-bottom: 10px;
 }
@@ -200,4 +286,214 @@ body {
 }
 .hourly-weather-icon {
   height: 60px;
+}
+.nav-bar {
+  outline: 1px solid red;
+  max-width: 500px;
+  width: 100%;
+  background-color: #111;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 50px;
+  position: fixed;
+  bottom: 3px;
+  right: 1px;
+}
+.nav-bar > button {
+  border: none;
+  background-color: inherit;
+}
+.daily-forecast {
+  display: none;
+}
+
+.days-forecast.fill > span:first-of-type,
+.home.fill > span:first-of-type,
+.fill > span:first-of-type {
+  background-color: rgba(204, 204, 255, 0.3);
+  border-radius: 30px;
+}
+
+.home > span:first-of-type,
+.saved > span:first-of-type {
+  width: 75px;
+  height: 40px;
+  padding: 7px 10px;
+}
+.days-forecast > span:first-of-type {
+  width: 75px;
+  height: 40px;
+  padding: 4px 10px;
+}
+
+.days-forecast.fill > span > svg,
+.home.fill > span > svg,
+.fill > span > svg {
+  fill: #ffffff;
+}
+.home,
+.days-forecast,
+.saved {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  color: #fff;
+}
+.tomorrow-info {
+  padding: 20px 0;
+}
+.tomorrow-forecast {
+  font-family: 'poppins';
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(40px);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 20px;
+  box-shadow:
+    0 8px 24px rgba(0, 0, 0, 0.12),
+    inset 0 1px 0 rgba(255, 255, 255, 0.6),
+    inset 0 -1px 2px rgba(0, 0, 0, 0.04);
+}
+.tomorrow-forecast > p:first-of-type {
+  font-weight: 600;
+  font-size: 1.3rem;
+}
+.weather-info.tomorrow-info {
+  margin: 30px 0 0;
+}
+/* .daily img {
+  width: 30px;
+  aspect-ratio: 1;
+} */
+.next-forecast {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  font-family: 'poppins';
+  gap: 25px;
+}
+.daily {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.2rem;
+  border-radius: 20px;
+  padding: 30px 15px;
+  box-shadow:
+    0 8px 24px rgba(0, 0, 0, 0.12),
+    inset 0 1px 0 rgba(255, 255, 255, 0.6),
+    inset 0 -1px 2px rgba(0, 0, 0, 0.04);
+}
+.daily > div {
+  display: flex;
+  align-items: center;
+  /* gap: 10px; */
+}
+.daily > p:first-of-type,
+.daily-temp {
+  font-weight: 600;
+}
+.tomorrow-temp-feel {
+  font-size: 1.3rem;
+}
+.saved-location {
+  display: none;
+  padding-bottom: 100px;
+}
+.saved-location h3 {
+  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+#saved-search-container {
+  margin-top: 20px;
+}
+.location-wrapper {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  font-family: 'poppins';
+}
+.location {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow:
+    0 8px 24px rgba(0, 0, 0, 0.12),
+    inset 0 1px 0 rgba(255, 255, 255, 0.6),
+    inset 0 -1px 2px rgba(0, 0, 0, 0.04);
+}
+.location > div:first-of-type {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.location > div:last-of-type {
+  margin: auto 0;
+  font-weight: 800;
+  font-size: 2rem;
+}
+.big-text {
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+.flex-span {
+  display: flex;
+  gap: 15px;
+}
+.flex-span > span {
+  font-weight: 600;
+}
+
+/* media queries */
+
+@media screen and (min-width: 501px) {
+  .container {
+    max-width: 760px;
+  }
+  .nav-bar {
+    outline: 1px solid red;
+    max-width: 760px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  div.container {
+    max-width: 960px;
+  }
+  .nav-bar {
+    /* display: none; */
+    position: fixed;
+    height: 150px;
+    top: 0;
+    max-width: 960px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 0 auto;
+  }
+  .container > div:first-of-type {
+    margin-top: 220px;
+  }
+
+  /*   .nav-bar {
+    outline: 1px solid red;
+    max-width: 300px;
+    width: 100%;
+    height: 60vh;
+    background-color: #000000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 50px;
+    position: absolute;
+    bottom: 100vh;
+    left: 1px;
+  } */
 }
