--- a/src/style.css
+++ b/src/style.css
@@ -123,7 +123,6 @@ body {
 .weather-info {
   margin: 25px auto;
   width: 100%;
-  /* height: 105px; */
   padding: 40px 0;
   border-radius: 22px;
   display: flex;
@@ -220,10 +219,10 @@ body {
   align-self: flex-end;
 }
 .moon-image {
-  max-width: 200px;
+  max-width: 150px;
   width: 100%;
   aspect-ratio: 1;
-  border-radius: 100px;
+  border-radius: 50%;
   background-image: url('./images/moon.jpg');
   background-position: center;
   background-size: cover;
@@ -239,7 +238,6 @@ body {
   align-items: center;
   max-width: 100%;
   color: #000;
-  /* padding: 0 30px; */
 }
 .weather-today {
   text-align: center;
@@ -364,10 +362,7 @@ body {
 .weather-info.tomorrow-info {
   margin: 30px 0 0;
 }
-/* .daily img {
-  width: 30px;
-  aspect-ratio: 1;
-} */
+
 .next-forecast {
   margin-top: 30px;
   display: flex;
@@ -481,19 +476,16 @@ body {
   .container > div:first-of-type {
     margin-top: 220px;
   }
+}
 
-  /*   .nav-bar {
-    outline: 1px solid red;
-    max-width: 300px;
-    width: 100%;
-    height: 60vh;
-    background-color: #000000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 50px;
-    position: absolute;
-    bottom: 100vh;
-    left: 1px;
-  } */
+@media screen and (max-width: 405px) {
+  .moon {
+    flex-direction: column;
+  }
+  .moon-image {
+    margin: auto;
+  }
+  .moon .start {
+    margin-right: auto;
+  }
 }
