--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 .home-container {
-  padding-top: 30px;
+  padding-top: 50px;
 }
 
 .search-container {
@@ -91,7 +91,7 @@ body {
 
 .weather-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(430px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
   margin: 20px 0;
 }
@@ -166,7 +166,7 @@ body {
 .astronomy {
   font-family: 'poppins';
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(430px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 12px;
 }
 .astronomy-time {
@@ -237,7 +237,19 @@ body {
   background-image: url('./images/moon.jpg');
   background-position: center;
   background-size: cover;
+  animation: spin 50s linear infinite;
+  box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
 }
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .small {
   font-size: 0.9rem;
 }
@@ -315,7 +327,7 @@ body {
 }
 .daily-forecast {
   display: none;
-  padding-top: 30px;
+  padding-top: 50px;
 }
 
 .days-forecast.fill > span:first-of-type,
@@ -371,14 +383,18 @@ body {
   font-weight: 600;
   font-size: 1.3rem;
 }
+.tomorrow-cloud {
+  font-weight: 600;
+  margin-top: 10px;
+}
 .weather-info.tomorrow-info {
-  margin: 30px 0 0;
+  margin: 10px 0 0;
 }
 
 .next-forecast {
   margin-top: 30px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   font-family: 'poppins';
   gap: 25px;
   color: #eee;
@@ -386,10 +402,11 @@ body {
 .daily {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   font-size: 1.2rem;
   border-radius: 20px;
   padding: 30px 15px;
+  position: relative;
   backdrop-filter: blur(20px);
   box-shadow:
     0 8px 24px rgba(0, 0, 0, 0.12),
@@ -399,6 +416,20 @@ body {
 .daily > div {
   display: flex;
   align-items: center;
+  position: relative;
+  margin-bottom: 20px;
+  right: 30px;
+}
+.day-div {
+  position: relative;
+  top: 40px;
+  width: 100%;
+}
+.day-span {
+  width: 200px;
+}
+.daily-temp {
+  margin-left: -80px;
 }
 .daily > p:first-of-type,
 .daily-temp {
@@ -409,14 +440,14 @@ body {
 }
 .saved-location {
   display: none;
-  padding: 30px 0 100px;
+  padding: 50px 0 100px;
   color: #eee;
 }
 .saved-location h3 {
   font-size: 1.5rem;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 10px;
   color: #eee;
 }
@@ -436,6 +467,7 @@ body {
   justify-content: space-between;
   padding: 20px;
   border-radius: 20px;
+  position: relative;
   box-shadow:
     0 8px 24px rgba(0, 0, 0, 0.12),
     inset 0 1px 0 rgba(255, 255, 255, 0.6),
@@ -444,7 +476,7 @@ body {
 .location > div:first-of-type {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 7px;
 }
 .location > div:last-of-type {
   margin: auto 0;
@@ -461,6 +493,14 @@ body {
 }
 .flex-span > span {
   font-weight: 600;
+}
+.saved-location-condition {
+  margin-bottom: 12px;
+}
+.saved-location-time {
+  width: 140px;
+  position: absolute;
+  bottom: 5px;
 }
 
 /* media queries */
@@ -479,6 +519,12 @@ body {
     max-width: 960px;
     margin: unset;
     margin-left: 250px;
+  }
+  .astronomy {
+    grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+  }
+  .weather-container {
+    grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
   }
   .nav-bar {
     position: fixed;
@@ -557,5 +603,15 @@ body {
   }
   .moon .start {
     margin-right: auto;
+  }
+  .daily-temp {
+    margin-left: -100px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  div.container {
+    max-width: 1100px;
+    margin-left: 300px;
   }
 }
