--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 .search-container {
-  max-width: 90%;
+  max-width: 100%;
   display: flex;
   margin: 0;
   height: 45px;
@@ -114,7 +114,7 @@ body {
   align-items: center;
   justify-content: flex-start;
   gap: 4px;
-  color: #eee;
+  color: #000;
 }
 
 .temp {
@@ -265,7 +265,8 @@ body {
 .weather-today {
   text-align: center;
   margin-bottom: 20px;
-  color: #555;
+  color: #222;
+  font-size: 1.3rem;
   font-family: 'Libertinus+Math';
 }
 .hourly-weather {
@@ -299,7 +300,7 @@ body {
   padding: 7px 10px;
   text-align: center;
   padding-bottom: 10px;
-  color: #eee;
+  color: #000;
 }
 
 .hourlyDataContainer > p:first-child {
@@ -397,7 +398,7 @@ body {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   font-family: 'poppins';
   gap: 25px;
-  color: #eee;
+  color: #000;
 }
 .daily {
   display: flex;
@@ -441,7 +442,7 @@ body {
 .saved-location {
   display: none;
   padding: 50px 0 100px;
-  color: #eee;
+  color: #000;
 }
 .saved-location h3 {
   font-size: 1.5rem;
@@ -449,7 +450,7 @@ body {
   align-items: center;
   justify-content: flex-start;
   gap: 10px;
-  color: #eee;
+  color: #000;
 }
 #saved-search-container {
   margin-top: 20px;
@@ -503,6 +504,36 @@ body {
   bottom: 5px;
 }
 
+.autocomplete-suggestions {
+  max-height: 200px;
+  overflow-y: auto;
+  background-color: white;
+  z-index: 1000;
+  position: absolute;
+  top: 50px;
+  width: calc(100% - 2px);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.autocomplete-suggestions div {
+  font-family: 'poppins';
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.autocomplete-suggestions div > span {
+  font-size: 1rem;
+  color: #555;
+}
+
+.autocomplete-suggestions div:hover {
+  background-color: #f0f0f0;
+}
+
 /* media queries */
 
 @media screen and (min-width: 501px) {
@@ -519,6 +550,10 @@ body {
     max-width: 960px;
     margin: unset;
     margin-left: 250px;
+  }
+
+  .search-container {
+    max-width: 90%;
   }
   .astronomy {
     grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
@@ -613,5 +648,19 @@ body {
   div.container {
     max-width: 1100px;
     margin-left: 300px;
+  }
+}
+
+@media screen and (min-width: 1310px) {
+  .daily:nth-of-type(2) {
+    grid-column: 2 / 3;
+    grid-row: 1;
+  }
+  .daily:nth-of-type(3) {
+    grid-row: 1 / 2;
+    grid-column: 3/4;
+  }
+  .daily-temp {
+    margin-left: -110px;
   }
 }
